# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,14 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import contactRouter from "./contact";
+import servicesRouter from "./services";
+import portfolioRouter from "./portfolio";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(contactRouter);
+router.use(servicesRouter);
+router.use(portfolioRouter);
 
 export default router;
